# coursework

./: .gitignore  .latexmkrc  AGENTS.md  README.md  main.tex  pyproject.toml  references.bib
configs/: app.yaml  clustering_meta.yaml  clustering_papers.yaml  recommendation.yaml
docs/: README.md  conclusion.md  experiments.md  metrics_methods_pipeline.md  Оформление текста работы КР.docx  Титульный лист курсовой работы МОЦП.docx
docs/implementing_stages/: 01_embeddings.md  (+5 more)
results/: selection_report.md  summary_metrics.csv  summary_metrics_quant.csv
scripts/: aggregate.py  author_model_utils.py  build_author_dataset.py  build_title_pdf.py  cluster_fcm.py  cluster_gmm.py  cluster_hdbscan.py  embed_papers.py  eval_retrieval.py  llm_label.py  llm_recs.py  metric_coherence.py  metric_distinctness.py  metric_quant.py  model.py  pipeline_common.py  predict_author_embeddings.py  reduce_pca.py  reduce_umap_final.py  reduce_umap_sweep.py  run_app.py  run_capacity_sweep.py  run_cluster_baselines.py  run_cluster_diagnostics.py  run_cluster_granularity.py  run_cluster_llm_assigned.py  run_cluster_llm_fine.py  run_cluster_llm_medium.py  run_cluster_llm_metacluster.py  run_cluster_llm_selection.py  run_cluster_papers.py  run_compare_retrieval_losses.py  run_embed_papers.py  run_eval_retrieval.py  run_eval_retrieval_llm.py  run_eval_transformer_variants.py  run_fastopic.py  run_final_tables.py  run_graph_retrieval.py  run_hybrid_retrieval.py  (+13 more)
sections/: annotation.tex  appendix.tex  chapter1.tex  chapter2.tex  chapter3.tex  conclusion.tex  introduction.tex  title.tex
(+117 files in other folders)
